--- a/amazon.css
+++ b/amazon.css
@@ -3,7 +3,7 @@ body{
     margin:0px;
     padding:0px;
 }
-div{
+.navbar{
 
     background-color:black;
     width:1050px;
@@ -32,4 +32,22 @@ button{
 input{
     border-radius:5px;
     width: auto;
+}
+.content-item{
+    margin-top:20px;
+    height:100px;
+    width:100px;
+    border:5px solid black;
+    background-color:black;
+    display:inline-block;
+
+}
+footer{
+    background-color:black;
+    color:white;
+    text-align: center;
+}
+#content-box{
+    height:490px;
+    align-items: center;
 }
